tests/base/parser/bad/exps/exp_t-match-spid-with-bar-cid-lparen-with.scilexp
let a = None {Bool} in
match a with
| Some (field) => field (* cannot call pattern arguments 'field' *)
| _ => False
end
